--- a/365_Portal/365_Portal.csproj
+++ b/365_Portal/365_Portal.csproj
@@ -58,6 +58,7 @@
       <HintPath>..\packages\Microsoft.Owin.Cors.4.0.1\lib\net45\Microsoft.Owin.Cors.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="MySql.Data, Version=8.0.18.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -232,6 +233,7 @@
     <Compile Include="DAL\UserDAL.cs" />
     <Compile Include="default.aspx.cs">
       <DependentUpon>default.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="default.aspx.designer.cs">
       <DependentUpon>default.aspx</DependentUpon>
@@ -241,6 +243,7 @@
     </Compile>
     <Compile Include="Life.Master.cs">
       <DependentUpon>Life.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Life.Master.designer.cs">
       <DependentUpon>Life.Master</DependentUpon>
@@ -471,6 +474,7 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Admin\NewFolder1\" />
     <Folder Include="App_Data\" />
     <Folder Include="Asset\admin\" />
     <Folder Include="Views\User\" />
