--- a/365_Portal/Web.config
+++ b/365_Portal/Web.config
@@ -11,7 +11,7 @@
   <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-365_Portal-20191012051758.mdf;Initial Catalog=aspnet-365_Portal-20191012051758;Integrated Security=True" providerName="System.Data.SqlClient" />-->
     <!--<add name="365LifeConnection" connectionString="server=remotemysql.com;userid=hyepvp089A;password=3a1D6aGBTI1;database=hyepvp089A" providerName="System.Data.MySqlClient" />-->
-    <add name="365LifeConnection" connectionString="server=localhost;userid=root;password=Test@1234;database=world" providerName="System.Data.MySqlClient" />
+    <add name="365LifeConnection" connectionString="server=localhost;userid=root;password=Test@1234;database=365db" providerName="System.Data.MySqlClient" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
