--- a/365_Portal/365_Portal.csproj
+++ b/365_Portal/365_Portal.csproj
@@ -225,6 +225,13 @@
     </Compile>
     <Compile Include="Common\DBConnection.cs" />
     <Compile Include="Common\JSONHelper.cs" />
+    <Compile Include="ContentDetails.aspx.cs">
+      <DependentUpon>ContentDetails.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ContentDetails.aspx.designer.cs">
+      <DependentUpon>ContentDetails.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Contents.aspx.cs">
       <DependentUpon>Contents.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -242,6 +249,7 @@
     </Compile>
     <Compile Include="Life.Master.cs">
       <DependentUpon>Life.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Life.Master.designer.cs">
       <DependentUpon>Life.Master</DependentUpon>
@@ -296,6 +304,13 @@
       <DependentUpon>Topics.aspx</DependentUpon>
     </Compile>
     <Compile Include="UserBO.cs" />
+    <Compile Include="validation.aspx.cs">
+      <DependentUpon>validation.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="validation.aspx.designer.cs">
+      <DependentUpon>validation.aspx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\HelpPage\HelpPage.css" />
@@ -304,6 +319,7 @@
     <Content Include="Asset\css\bootstrap.min.css" />
     <Content Include="Asset\css\select2.min.css" />
     <Content Include="Asset\css\site.css" />
+    <Content Include="Asset\data\bunny.mp4" />
     <Content Include="Asset\images\close-button.png" />
     <Content Include="Asset\images\contract-file.png" />
     <Content Include="Asset\images\diploma.png" />
@@ -327,6 +343,7 @@
     <Content Include="Asset\webfonts\fa-regular-400.svg" />
     <Content Include="Asset\webfonts\fa-solid-900.svg" />
     <Content Include="ChangePassword.aspx" />
+    <Content Include="ContentDetails.aspx" />
     <Content Include="Contents.aspx" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
@@ -372,6 +389,7 @@
     <Content Include="Asset\webfonts\fa-solid-900.woff" />
     <Content Include="Asset\webfonts\fa-solid-900.woff2" />
     <Content Include="Life.Master" />
+    <Content Include="Asset\data\test.pdf" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -386,6 +404,7 @@
     <Content Include="Settings.aspx" />
     <Content Include="Test.html" />
     <Content Include="Topics.aspx" />
+    <Content Include="validation.aspx" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
