Password Hash added

--- a/365_Portal/Web.config
+++ b/365_Portal/Web.config
@@ -11,7 +11,7 @@
   <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-365_Portal-20191012051758.mdf;Initial Catalog=aspnet-365_Portal-20191012051758;Integrated Security=True" providerName="System.Data.SqlClient" />-->
     <!--<add name="365LifeConnection" connectionString="server=remotemysql.com;userid=hyepvp089A;password=3a1D6aGBTI1;database=hyepvp089A" providerName="System.Data.MySqlClient" />-->
-    <add name="365LifeConnection" connectionString="server=localhost;userid=root;password=Test@1234;database=365db" providerName="System.Data.MySqlClient" />
+    <add name="365LifeConnection" connectionString="server=52.168.24.78;userid=sa;password=Test@1234;database=365app" providerName="System.Data.MySqlClient" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
@@ -23,17 +23,17 @@
     </httpModules>
   </system.web>
   <system.webServer>
-    <modules>
+    <!--<modules>
       <remove name="FormsAuthentication" />
       <remove name="ApplicationInsightsWebTracking" />
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
-    </modules>
-    <handlers>
+    </modules>-->
+    <!--<handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers>
+    </handlers>-->
     <validation validateIntegratedModeConfiguration="false" />
   </system.webServer>
   <runtime>
