--- a/365_Portal/365_Portal.csproj
+++ b/365_Portal/365_Portal.csproj
@@ -225,6 +225,8 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Code\BL\FlashcardBL.cs" />
+    <Compile Include="Code\BL\AchivementBL.cs" />
     <Compile Include="Code\BL\CommonBL.cs" />
     <Compile Include="Code\BL\ContentBL.cs" />
     <Compile Include="Code\BL\SurveyBL.cs" />
@@ -239,6 +241,8 @@
     <Compile Include="Code\BL\UserBL.cs" />
     <Compile Include="Code\BO\ContentBO.cs" />
     <Compile Include="Code\DAL\CommonDAL.cs" />
+    <Compile Include="Code\DAL\AchivementDAL.cs" />
+    <Compile Include="Code\DAL\FlashcardDAL.cs" />
     <Compile Include="Code\DAL\ContentDAL.cs" />
     <Compile Include="Code\DAL\SurveyDAL.cs" />
     <Compile Include="Code\Utility.cs" />
