Converted all Int64 to Int32 Created APi for Chnage Password and Get Login Details

--- a/365_Portal/Web.config
+++ b/365_Portal/Web.config
@@ -11,7 +11,10 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-365_Portal-20191012051758.mdf;Initial Catalog=aspnet-365_Portal-20191012051758;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
-  <appSettings></appSettings>
+  <appSettings>
+    <add key="dbPasswordSalt" value="SUqfy3IHGUG4YVM/aO7lXWIKz4FAP18spNMiFdiGKNQ="/>
+    <add key="dbPasswordHashed" value="hdc5ZLZ4sE75e3OqbgR+PqXtr1Y="/>
+  </appSettings>
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
