--- a/365_Portal/365_Portal.csproj
+++ b/365_Portal/365_Portal.csproj
@@ -293,6 +293,13 @@
     <Compile Include="default.aspx.designer.cs">
       <DependentUpon>default.aspx</DependentUpon>
     </Compile>
+    <Compile Include="FinalQuiz.aspx.cs">
+      <DependentUpon>FinalQuiz.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="FinalQuiz.aspx.designer.cs">
+      <DependentUpon>FinalQuiz.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Flashcards.aspx.cs">
       <DependentUpon>Flashcards.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -496,6 +503,7 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="default.aspx" />
     <Content Include="favicon.ico" />
+    <Content Include="FinalQuiz.aspx" />
     <Content Include="Flashcards.aspx" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
