--- a/365_Portal/365_Portal.csproj
+++ b/365_Portal/365_Portal.csproj
@@ -634,6 +634,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="ProfilePic\" />
     <Folder Include="Views\User\" />
   </ItemGroup>
   <ItemGroup>
