--- a/365_Portal/packages.config
+++ b/365_Portal/packages.config
@@ -51,5 +51,6 @@
   <package id="Respond" version="1.2.0" targetFramework="net452" />
   <package id="SendGrid.Net40" version="5.1.0.0" targetFramework="net452" />
   <package id="SendGrid.SmtpApi" version="1.1.3" targetFramework="net452" />
+  <package id="System.Threading" version="4.3.0" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
