--- a/365_Portal/365_Portal.csproj
+++ b/365_Portal/365_Portal.csproj
@@ -658,7 +658,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="ProfilePic\" />
+    <Folder Include="Files\ProfilePic\" />
     <Folder Include="Views\User\" />
   </ItemGroup>
   <ItemGroup>
