--- a/365_Portal/365_Portal.csproj
+++ b/365_Portal/365_Portal.csproj
@@ -658,6 +658,8 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Files\CompLogo\" />
+    <Folder Include="Files\Others\" />
     <Folder Include="Files\ProfilePic\" />
     <Folder Include="Views\User\" />
   </ItemGroup>
