Passwoord recovery, Modules Topics

--- a/365_Portal/365_Portal.csproj
+++ b/365_Portal/365_Portal.csproj
@@ -301,7 +301,9 @@
     <Compile Include="Code\BL\CommonBL.cs" />
     <Compile Include="Code\BL\ContentBL.cs" />
     <Compile Include="Code\BL\FlashcardBL.cs" />
+    <Compile Include="Code\BL\ModulesBL.cs" />
     <Compile Include="Code\BL\SurveyBL.cs" />
+    <Compile Include="Code\BL\TopicsBL.cs" />
     <Compile Include="Code\BL\TrainningBL.cs" />
     <Compile Include="Code\BL\UserBL.cs" />
     <Compile Include="Code\BO\ContentBO.cs" />
@@ -312,7 +314,9 @@
     <Compile Include="Code\DAL\CommonDAL.cs" />
     <Compile Include="Code\DAL\ContentDAL.cs" />
     <Compile Include="Code\DAL\FlashcardDAL.cs" />
+    <Compile Include="Code\DAL\ModuleDAL.cs" />
     <Compile Include="Code\DAL\SurveyDAL.cs" />
+    <Compile Include="Code\DAL\TopicsDAL.cs" />
     <Compile Include="Code\DAL\TrainningDAL.cs" />
     <Compile Include="Code\DAL\UserDAL.cs" />
     <Compile Include="Code\Logger.cs" />
@@ -337,6 +341,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ModuleController.cs" />
+    <Compile Include="Controllers\TopicsController.cs" />
     <Compile Include="Controllers\TrainningController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
