Removed unwanted params from login & MyProfile API

--- a/365_Portal/365_Portal.csproj
+++ b/365_Portal/365_Portal.csproj
@@ -309,6 +309,7 @@
     <Compile Include="Code\BO\ContentBO.cs" />
     <Compile Include="Code\BO\LoginLogout.cs" />
     <Compile Include="Code\BO\TrainningBO.cs" />
+    <Compile Include="Code\BO\UserProfile.cs" />
     <Compile Include="Code\ConnectionManager.cs" />
     <Compile Include="Code\DAL\AchivementDAL.cs" />
     <Compile Include="Code\DAL\CommonDAL.cs" />
