validation in survey page change showLoader/hideLoader to ShowLoader/HideLoader change icons

--- a/365_Portal/365_Portal.csproj
+++ b/365_Portal/365_Portal.csproj
@@ -470,15 +470,29 @@
     <Content Include="Asset\images\close-button.png" />
     <Content Include="Asset\images\contract-file.png" />
     <Content Include="Asset\images\diploma.png" />
+    <Content Include="Asset\images\employee-illustration.svg" />
+    <Content Include="Asset\images\engager-icon.svg" />
     <Content Include="Asset\images\exam.png" />
     <Content Include="Asset\images\flash-card.png" />
+    <Content Include="Asset\images\flashcard-icon.svg" />
     <Content Include="Asset\images\giftbox.png" />
     <Content Include="Asset\images\logo.svg" />
+    <Content Include="Asset\images\next-flashcard-icon.svg" />
+    <Content Include="Asset\images\next-pdf-icon.svg" />
+    <Content Include="Asset\images\next-video-icon.svg" />
     <Content Include="Asset\images\pdf-file.png" />
+    <Content Include="Asset\images\pdf-icon.svg" />
+    <Content Include="Asset\images\perfectionist-c-icon.svg" />
     <Content Include="Asset\images\profile.png" />
+    <Content Include="Asset\images\quiz-icon.svg" />
+    <Content Include="Asset\images\quiz-master-c-icon.svg" />
+    <Content Include="Asset\images\reward-icon.svg" />
+    <Content Include="Asset\images\survey-icon.svg" />
     <Content Include="Asset\images\survey.png" />
     <Content Include="Asset\images\target.png" />
     <Content Include="Asset\images\video-file.png" />
+    <Content Include="Asset\images\video-icon.svg" />
+    <Content Include="Asset\images\wordsmith-c-icon.svg" />
     <Content Include="Asset\js\all.js" />
     <Content Include="Asset\js\angular.min.js" />
     <Content Include="Asset\js\bootstrap.js" />
